fixed display problem on mobile etc

--- a/styles/_article.scss
+++ b/styles/_article.scss
@@ -108,6 +108,7 @@
     .article-header-container {
       margin: 0;
       padding: 0px 30px;
+      width: calc(100% - 60px);
 
       .article-header {
         padding: 45px 0 0 !important;
