--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -47,7 +47,6 @@
     .menu-avtar-container {
       display: flex;
       flex-direction: row;
-      // justify-content: center;
       align-items: center;
 
       .avatar-container {
@@ -71,6 +70,7 @@
         box-shadow: -2px -2px 3px #eff3f8, 2px 2px 3px rgba(136, 165, 191, 0.78);
         border-radius: 50%;
       }
+
       .menu-avtar-name {
         margin: 0;
         font-size: 18px;
@@ -106,6 +106,7 @@
   .log-ul {
     margin-left: 40px;
     padding: 0;
+
     li {
       margin-left: 8px;
 
@@ -125,8 +126,9 @@
       width: 25px;
       height: 25px;
     }
+
     .menu-content-container {
-      width: 230px;
+      width: 200px;
       height: calc(100% - 65px);
       background: white;
       position: fixed;
@@ -144,13 +146,14 @@
       a {
         width: 100%;
         padding: 0;
+        letter-spacing: 2px;
       }
 
       li {
         height: 60px;
         display: flex;
         align-items: center;
-        padding-left: 60px;
+        margin-left: 45%;
       }
 
       ul {
@@ -173,6 +176,7 @@
         left: 0px;
       }
     }
+
     .anticon,
     .anticon-menu {
       display: flex;
@@ -188,7 +192,8 @@
 
       li {
         height: 60px;
-        margin-left: 0;
+
+
         a {
           font-size: 20px;
           margin-left: 0px;
