--- a/styles/_userDashboard.scss
+++ b/styles/_userDashboard.scss
@@ -78,12 +78,12 @@
     width: 100%;
     height: 380px;
     flex-direction: column;
-    padding: 25px;
+    padding: 25px 0;
 
     .userInfo {
       width: 100%;
       flex-direction: column;
-      height: 380px;
+      height: 280px;
       margin-bottom: 0px;
 
       .avatar-container {
@@ -97,7 +97,6 @@
 
     & ul {
       width: 100%;
-      padding: 0 20px;
       justify-content: center;
       flex-direction: row;
       margin: 0;
